tests/ui/loop-match/invalid.stderr
error[E0308]: mismatched types
  --> $DIR/invalid.rs:119:21
   |
LL |                     break 'blk;
   |                     ^^^^^^^^^^ expected `State`, found `()`
   |
help: give the `break` a value of the expected type
   |
LL |                     break 'blk /* value */;
   |                                +++++++++++

error: invalid update of the `loop_match` state
  --> $DIR/invalid.rs:15:9
   |
LL |         fake = 'blk: {
   |         ^^^^
LL |
LL |             match state {
   |                   ----- the assignment must update this variable

error: invalid match on `loop_match` state
  --> $DIR/invalid.rs:29:19
   |
LL |             match State::A {
   |                   ^^^^^^^^
   |
   = note: only matches on local variables are valid

error: statements are not allowed in this position within a `loop_match`
  --> $DIR/invalid.rs:41:9
   |
LL |         1;
   |         ^^

error: statements are not allowed in this position within a `loop_match`
  --> $DIR/invalid.rs:56:13
   |
LL |             1;
   |             ^^

error: this expression must be a single `match` wrapped in a labelled block
  --> $DIR/invalid.rs:69:17
   |
LL |         state = State::B
   |                 ^^^^^^^^

error: this expression must be a single `match` wrapped in a labelled block
  --> $DIR/invalid.rs:79:13
   |
LL |             State::B
   |             ^^^^^^^^

error: this expression must be a single `match` wrapped in a labelled block
  --> $DIR/invalid.rs:89:17
   |
LL |           state = 'blk: {
   |  _________________^
LL | |
LL | |         }
   | |_________^

error: expected a single assignment expression
  --> $DIR/invalid.rs:99:9
   |
LL |         ()
   |         ^^

error: expected a single assignment expression
  --> $DIR/invalid.rs:106:10
   |
LL |       loop {
   |  __________^
LL | |
LL | |     }
   | |_____^

error: a `const_continue` must break to a label with a value
  --> $DIR/invalid.rs:136:21
   |
LL |                     break 'blk;
   |                     ^^^^^^^^^^

error: aborting due to 11 previous errors

For more information about this error, try `rustc --explain E0308`.
